# book-management-system

./: .gitignore  Dockerfile  README.md  book_library.csv  docker-compose.yaml  main.py  payload.json  pyproject.toml  requirements.txt
app/api/: book_admin_api.py
app/core/: logger.py
app/db/: book_admin_repository.py
app/models/: book.py
app/schemas/: book.py
app/services/: book_admin_service.py
app/streamlit/: book_admin_ui.py
