[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "book-management-system"
version = "0.1.0"
description = "A FastAPI based Book Management System"
readme = "README.md"
requires-python = ">=3.9"

# Add your specific libraries to this list
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    # "your-missing-library-here"
]

[project.optional-dependencies]
# Useful for keeping testing tools separate from production
dev = [
    "pytest",
    "httpx",
]